--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="card" style="width: 18rem;">
         &nbsp
         <div class="d-flex justify-content-center">
-            <h><dt><span>&#127851 Instacity</span></dt></h>
+            <h><dt><span>&#127851 web1</span></dt></h>
         </div>
 
     </br>
